--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-    <p> teste </p>
+    <p> Aqui iria a barra que sempre aparece em todas as paginas do site </p>
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
+
 </body>
 </html>
