--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    {% load staticfiles %}
+    <link rel='stylesheet' href="{% static 'css/bootstrap.min.css'%}" type='text/css'/>
 </head>
 <body>
-    <p> Aqui iria a barra que sempre aparece em todas as paginas do site </p>
+      <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">GAMECEPTION</a>
+        </div>
+
+        <!-- As abas -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Acervo</a></li>
+              <li><a href="#">Sobre</a></li>
+              <li><a href="#">Contatos</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
     <div>
         {% block content %}
         {% endblock %}
