--- a/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
+++ b/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
@@ -3,7 +3,9 @@
 {% block content %}
 <form action="/Assinante/InfoPagamento/" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+     <table>
+        {{ form.as_table }}
+    </table>
     <input type="submit" value="OK" />
 </form>
 {% endblock %}
