--- a/Gameception/Assinante/Templates/Assinante/Assinatura.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinatura.html
@@ -1,3 +1,6 @@
+{% extends "MainPage.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +8,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>ASSINATURA</h1>
 </body>
 </html>
+{% endblock %}
