--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -24,10 +24,10 @@
         <!-- As abas -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="../../Home">Home</a></li>
-            <li><a href="../../Acervo">Acervo</a></li>
-              <li><a href="../../Sobre">Sobre</a></li>
-              <li><a href="../../Contatos">Contatos</a></li>
+            <li><a href="../../Home">Home</a></li>                     #Acesso a Homepage
+            <li><a href="../../Acervo">Acervo</a></li>                 #Acesso a pagina de acervo
+              <li><a href="../../InfoGeral/Sobre">Sobre</a></li>       #Adicionado caminho por /InfoGeral/ para filtragem inicial da URL
+              <li><a href="../../InfoGeral/Contatos">Contatos</a></li> #Adicionado caminho por /InfoGeral/ para filtragem inicial da URL
           </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="../../Assinante">Assinante</a></li>
