--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="../../Home">Home</a></li>                     <!--Acesso a Homepage-->
-            <li><a href="../../Acervo">Acervo</a></li>                 <!--Acesso a pagina de acervo
+            <li><a href="../../Acervo">Acervo</a></li>                 <!--Acesso a pagina de acervo-->
               <li><a href="../../InfoGeral/Sobre">Sobre</a></li>       <!--Adicionado caminho por /InfoGeral/ para filtragem inicial da URL-->
               <li><a href="../../InfoGeral/Contatos">Contatos</a></li> <!--Adicionado caminho por /InfoGeral/ para filtragem inicial da URL-->
           </ul>
