--- a/Gameception/Assinante/Templates/Assinante/Cadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/Cadastro.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "MainPage.html" %}
 
-</body>
-</html>
+{% block content %}
+<h1>Register with Rango</h1>
+
+       {% if registrado %}
+       <strong>Obrigado por registar-se!!!</strong>
+       <a href="/">Return to the homepage.</a><br />
+       {% else %}
+       Rango says: <strong>registre-se!</strong><br />
+
+       <form id="user_form" method="post" action="/Assinante/Cadastro/"
+               enctype="multipart/form-data">
+
+           {% csrf_token %}
+
+           <!-- Display each form. The as_p method wraps each element in a paragraph
+                (<p>) element. This ensures each element appears on a new line,
+                making everything look neater. -->
+           {{ user_form.as_p }}
+           <!-- {{ assinante_form.as_p }} -->
+
+           <!-- Provide a button to click to submit the form. -->
+           <input type="submit" name="submit" value="Register" />
+       </form>
+       {% endif %}
+{% endblock %}
