novo estilo do bootstrap c/ barra lateral

--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    {% load staticfiles %}
-    <link rel='stylesheet' href="{% static 'css/bootstrap.min.css'%}" type='text/css'/>
     <meta name="viewport", content="wicth=device-width, initial-scale=1.0">
 </head>
 <body>
-<div style="background-color: #00AAAA; margin-top: 100px;">
+<div style="background-color: #FFFFFF; margin-top: 100px;">
     <li><a href="Cadastro"> Cadastro </a></li><br>
     <li><a href="Assinatura"> Assinatura </a></li><br>
     <li><a href="Historico"> Hitsórico </a></li><br>
