--- a/Gameception/Assinante/Templates/Assinante/Cadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/Cadastro.html
@@ -1,27 +1,43 @@
 {% extends "MainPage.html" %}
 
+
 {% block content %}
-<h1>Register with Rango</h1>
 
-       {% if registrado %}
-       <strong>Obrigado por registar-se!!!</strong>
-       <a href="/">Return to the homepage.</a><br />
-       {% else %}
-       Rango says: <strong>registre-se!</strong><br />
+  {% if registrado %}
 
-       <form id="user_form" method="post" action="/Assinante/Cadastro/"
-               enctype="multipart/form-data">
+      Obrigado por registrar-se! <a href="{% url 'Login' %}"> Faça seu login </a> e visite sua conta!
 
-           {% csrf_token %}
+  {% else %}
 
-           <!-- Display each form. The as_p method wraps each element in a paragraph
-                (<p>) element. This ensures each element appears on a new line,
-                making everything look neater. -->
-           {{ user_form.as_p }}
-           {{ assinante_form.as_p }}
+      <form role="form"  method="post" action="/Assinante/Cadastro/">
+                      {% csrf_token %}
 
-           <!-- Provide a button to click to submit the form. -->
-           <input type="submit" name="submit" value="Register" />
-       </form>
-       {% endif %}
+      <h2 class="form-signin-heading">Sign Up Here</h2>
+
+      <div class="form-group" >
+       <p class="required"> <label for="id_username">Username:</label>
+           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
+      </div>
+       <div class="form-group">
+          <p class="required"><label for="id_email">E-mail:</label>
+              <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
+       </div>
+      <div class="form-group">
+          <p class="required"><label for="id_password">Password:</label>
+              <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
+      </div>
+      <div class="form-group">
+          <p class="required"><label for="id_CPF">CPF:</label>
+       <input class="form-control" id="id_CPF" maxlength="11" name="CPF" type="text" placeholder="CPF" /></p>
+      </div>
+      <div class="form-group">
+          <p class="required"><label for="id_nome">Nome:</label>
+       <input class="form-control" id="id_nome" maxlength="200" name="nome" type="text" placeholder="Nome" /></p>
+      </div>
+
+      <button type="submit" class="btn btn-default">Submit</button>
+
+      </form>
+
+    {% endif %}
 {% endblock %}
