--- a/Gameception/Assinante/Templates/Assinante/Login.html
+++ b/Gameception/Assinante/Templates/Assinante/Login.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 
-        <h1>Login</h1>
+<h1>Login</h1>
 
-        <form id="login_form" method="post" action="/Assinante/Login/">
-            {% csrf_token %}
-            Username: <input type="text" name="username" value="" size="50" />
-            <br />
-            Password: <input type="password" name="password" value="" size="50" />
-            <br />
+<link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
 
-            <input type="submit" value="submit" />
-        </form>
+<form class="form-signin" role="form" method="post" action=".">
+{% csrf_token %}
+
+<h2 class="form-signin-heading">Insira suas informações de Login</h2>
+<input class="form-control" placeholder="Nome de Usuário" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
+<input type="password" class="form-control" placeholder="Senha" id="id_password" name="password"  required />
+
+<button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
+</form>
 
 {% endblock %}
