--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    {% load staticfiles %}
-    <link rel='stylesheet' href="{% static 'css/bootstrap.min.css'%}" type='text/css'/>
-    <meta name="viewport", content="wicth=device-width, initial-scale=1.0">
-</head>
-<body>
-      <nav class="navbar navbar-default">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+
+    <title>Gameception - {% block title %}Home{% endblock %}</title>
+
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">GAMECEPTION</a>
+          <a class="navbar-brand" href="">GAMECEPTION</a>
         </div>
-
-        <!-- As abas -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../../Home">Home</a></li>                     <!--Acesso a Homepage-->
-            <li><a href="../../Acervo">Acervo</a></li>                 <!--Acesso a pagina de acervo-->
-              <li><a href="../../InfoGeral/Sobre">Sobre</a></li>       <!--Adicionado caminho por /InfoGeral/ para filtragem inicial da URL-->
-              <li><a href="../../InfoGeral/Contatos">Contatos</a></li> <!--Adicionado caminho por /InfoGeral/ para filtragem inicial da URL-->
+            <li><a href="">Home</a></li>                     <!--Acesso a Homepage-->
+            <li><a href="{% url 'Acervo' %}">Acervo</a></li>                 <!--Acesso a pagina de acervo-->
+              <li><a href="{% url 'Sobre' %}">Sobre</a></li>       <!--Adicionado caminho por /InfoGeral/ para filtragem inicial da URL-->
+              <li><a href="{% url 'Contatos' %}">Contatos</a></li> <!--Adicionado caminho por /InfoGeral/ para filtragem inicial da URL-->
           </ul>
           {% if user.is_authenticated %}
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../../Assinante">Assinante</a></li>
+                <li><a href="{% url 'MinhaConta' %}">Minha Conta</a></li>
                 <li><a href="{% url 'Logout' %}">Logout</a></li>
             </ul>
           {% else %}
@@ -40,14 +50,35 @@
             <li><a href="{% url 'Cadastro' %}">Cadastre-se</a></li>                 <!--Acesso a pagina de acervo-->
           </ul>
           {% endif %}
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-    <div>
-        {% block content %}
-        {% endblock %}
+        </div>
+      </div>
     </div>
 
-</body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          {% if user.is_authenticated %}
+           <div class="">
+             Bem vindo {{user.username}}!
+           </div>
+          {% endif %}
+                {% block side_block %}{% endblock %}
+
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+           <div>
+                {% block content %}{% endblock %}
+                </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
