--- a/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
+++ b/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
@@ -1,11 +1,21 @@
 {% extends "MainPage.html" %}
 
 {% block content %}
-<form action="/Assinante/InfoPagamento/" method="post">
-    {% csrf_token %}
-     <table>
-        {{ form.as_table }}
-    </table>
-    <input type="submit" value="OK" />
-</form>
+
+    {% if finalizado %}
+
+        Os dados bancarios foram armazenados com sucesso.
+
+    {% else %}
+
+        <form action="/Assinante/InfoPagamento/" method="post">
+            {% csrf_token %}
+            <table>
+                {{ form.as_table }}
+            </table>
+            <input type="submit" value="OK" />
+        </form>
+
+    {% endif %}
+
 {% endblock %}
