--- a/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
+++ b/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
@@ -8,12 +8,42 @@
 
     {% else %}
 
-        <form action="/Assinante/InfoPagamento/" method="post">
+        <form role="form" action="/Assinante/InfoPagamento/" method="post">
             {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-            </table>
-            <input type="submit" value="OK" />
+            <h2 class="form-signin-heading">Informações de Pagamento</h2>
+
+
+            {{ form.non_field_errors }}
+            <div class="form-group" >
+                {{ form.numeroCartaoForm.errors }}
+                <p class="required">
+                    <label for="{{ form.numeroCartaoForm.id_for_label }}">Numero do cartão:</label>
+                    <input class="form-control"  id="{{ form.numeroCartaoForm.id_for_label }}" name="numeroCartaoForm" type="text"  placeholder="Numero do cartão"/>
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ form.codigoSegurancaForm.errors }}
+                <p class="required">
+                    <label for="{{ form.codigoSegurancaForm.id_for_label }}">Código de Segurança:</label>
+                    <input class="form-control"  id="{{ form.codigoSegurancaForm.id_for_label }}" name="codigoSegurancaForm" type="text"  placeholder="Código de Segurança"/>
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ form.nomeTitularForm.errors }}
+                <p class="required">
+                    <label for="{{ form.nomeTitularForm.id_for_label }}">Nome do Titular:</label>
+                    <input class="form-control"  id="{{ form.nomeTitularForm.id_for_label }}" name="nomeTitularForm" type="text"  placeholder="Nome do Titular"/>
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ form.vencimentoForm.errors }}
+                <p class="required">
+                    <label for="{{ form.vencimentoForm.id_for_label }}">Data de Vencimento:</label>
+                    <input class="form-control"  id="{{ form.vencimentoForm.id_for_label }}" name="vencimentoForm" type="text"  placeholder="Data de Vencimento"/>
+                </p>
+            </div>
+
+            <button type="submit" class="btn btn-default">Submit</button>
         </form>
 
     {% endif %}
