Tela de assinante mais parecida com o mockup

--- a/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
+++ b/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
@@ -4,7 +4,7 @@
 
     {% if finalizado %}
 
-        Os dados bancarios foram armazenados com sucesso.
+        Os dados bancarios foram armazenados com sucesso. <a href="{% url 'MinhaConta' %}">Voltar à sua página de assinante</a>
 
     {% else %}
 
