--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -1,22 +1,122 @@
 {% extends "MainPage.html" %}
 
-{% block content %}
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <meta name="viewport", content="wicth=device-width, initial-scale=1.0">
-</head>
-<body>
-<div style="background-color: #FFFFFF; margin-top: 100px;">
-    <li><a href="Cadastro"> Cadastro </a></li><br>
-    <li><a href="Assinatura"> Assinatura </a></li><br>
-    <li><a href="Historico"> Hitsórico </a></li><br>
-    <li><a href="InfoPagamento"> Informações de Pagamento </a></li><br>
-    <li><a href="ContatoAdmin"> Contacte um Administrador </a></li><br>
-        <div style='margin-top: 5px; margin-left: 5px; width: 100px; height: 50px'><span style='font-size: 16px'>MINHA CONTA</span></div>
-        <br><br>
-        <div style='margin-top: 20px; margin-left: 5px; width: 100px; height: 100px'>Endereço: {{ endereco.rua }}, {{ endereco.numeroRua }} - {{ endereco.complemento }} / {{ endereco.CEP }}</div>
-      </div>
-</body>
+    {% load staticfiles %}
 
-{% endblock %}
+    {% block content %}
+    <div class="page-header">
+    <h1>Bem-vindo {{ user.username }}!</h1>
+    </div>
+
+    <div class="row placeholders">
+
+      <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Meu histórico de Jogos</h3>
+          </div>
+          {% if tem_assinatura %}
+            {% if tem_pedido_para_mostrar %}
+              Entrega de {{pedido_recente.data}}
+              {% for jogo in pedido_recente.jogosPedidos.all %}
+              <div class="">
+                <img src="/static/images/banners/{{jogo.nomeImagem}}.jpg" alt="{{jogo.nomeImagem}}" /><br>
+                <div class="">
+                  {{jogo.nome}}
+                </div>
+              </div>
+              {% endfor %}
+              <a href="/Assinante/Historico/{{pedido_recente.numero}}/">Ver minhas outras entregas</a>
+            {% else %}
+              Você ainda não recebeu nenhum jogo! Aguarde sua primeira entrega em breve!
+            {% endif %}
+          {% else %}
+            Complete sua assinatura para começar a receber jogos!
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Minha Assinatura</h3>
+          </div>
+          {% if tem_assinatura %}
+            {% if assinatura.atividade %}
+              <strong>{{assinatura.quantidade}}</strong> jogos por mês <br>
+              Até R$ <strong>{{assinatura.precoPorJogo}}</strong> por jogo <br>
+              Seus gêneros:<br>
+                {% for genero in assinatura.generosPessoais.all %}
+                  <strong>{{genero.nome}}</strong><br>
+                {% endfor %}
+              processador <strong>{{assinatura.processador.proc}}</strong><br>
+              <a href="{% url 'CadastroAssinatura' %}">Editar assinatura</a>
+            {% else %}
+              Você desativou sua assinatura...
+              <a href="{% url 'CadastroAssinatura' %}">Edite sua assinatura para reativá-la</a>
+            {% endif %}
+          {% else %}
+            {% if dados_completos %}
+              Você ainda não completou sua assinatura... <br>
+              <a href="{% url 'CadastroAssinatura' %}">Diga-nos suas preferências e comece a receber jogos!</a>
+            {% else %}
+              Você ainda não completou agumas informações... <br>
+              {% if not tem_infos_pagamento %}
+                <a href="{% url 'InfoPagamento' %}">Complete suas informações de pagamento</a><br>
+              {% endif %}
+              {% if not tem_infos_endereco %}
+                <a href="{% url 'CadastroEndereco' %}">Complete suas informações de endereco</a><br>
+              {% endif %}
+              Complete suas informações para poder fazer sua assinatura!
+            {% endif %}
+          {% endif %}
+        </div>
+      </div>
+
+
+      <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Minhas Informações de Endereco</h3>
+          </div>
+          {% if tem_infos_endereco %}
+            <strong>Rua</strong> {{infos_endereco.rua}},{{infos_endereco.numeroRua}},{{infos_endereco.complemento}} <br>
+            <strong>CEP</strong> {{infos_endereco.CEP}} <br>
+            <a href="{% url 'CadastroEndereco' %}">Editar informações de endereco</a>
+          {% else %}
+          Você ainda não registrou suas informações de endereço...
+          <a href="{% url 'CadastroEndereco' %}"><br>
+            Registrar suas informações de endereço!</a>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Minhas Informações de Pagamento</h3>
+          </div>
+          {% if tem_infos_pagamento %}
+            <strong>Titular</strong> {{infos_pagamento.nomeTitular}} <br>
+            <strong>Nº Cartao</strong> {{infos_pagamento.numeroCartao}} <br>
+            <strong>Código de seguranca</strong> {{infos_pagamento.codigoSeguranca}} <br>
+            <a href="{% url 'InfoPagamento' %}">Editar informações de pagamento</a>
+          {% else %}
+            Você ainda não registrou suas informações de pagamento...
+            <a href="{% url 'InfoPagamento' %}"><br>
+              Registrar suas informações de pagamento!</a>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Outras opções</h3>
+          </div>
+          <a href="#">Editar senha e nome de usuário</a> <br>
+          <a href="{% url 'ContatoAdmin' %}">Contatar um administrador</a> <br>
+        </div>
+      </div>
+
+    </div>
+    {% endblock %}
