--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -8,8 +8,23 @@
     <title>Title</title>
 </head>
 <body>
-<h1>HISTÓRICO</h1>
-mostrar aqui o pedido {{num_pedido}} do assinante {{user.username}}
+      <h1>HISTÓRICO</h1>
+      mostrar aqui o pedido {{num_pedido}} do assinante {{user.username}}<br>
+      {{pedido.data}}
+      {% for jogo in pedido.jogosPedidos.all %}
+      <div class="">
+        <img src="/static/images/banners/{{jogo.nomeImagem}}.jpg" alt="{{jogo.nomeImagem}}" /><br>
+        <div class="">
+          {{jogo.nome}}
+        </div>
+      </div>
+      {% endfor %}
+      {% if pode_sucessor %}
+        <a href="/Assinante/Historico/{{sucessor}}/">Próxima entrega</a><br>
+      {% endif %}
+      {% if pode_antecessor %}
+        <a href="/Assinante/Historico/{{antecessor}}/">Entrega anterior</a><br>
+      {% endif %}
 </body>
 </html>
 {% endblock %}
