--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,10 +60,11 @@
         <div class="col-sm-3 col-md-2 sidebar">
           {% if user.is_authenticated %}
            <div class="">
-             Bem vindo {{user.username}}!
+             Bem vindo {{user.username}}! <br>
+             <a href="{% url 'MinhaConta' %}">Minha Conta</a> <br>
+             <a href="{% url 'Historico' %}">Meu Historico de Jogos</a> <br>
            </div>
           {% endif %}
-                {% block side_block %}{% endblock %}
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
