--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -19,7 +19,7 @@
               Entrega de {{pedido_recente.data}}
               {% for jogo in pedido_recente.jogosPedidos.all %}
               <div class="">
-                <img src="/static/images/banners/{{jogo.nomeImagem}}.jpg" alt="{{jogo.nomeImagem}}" /><br>
+                <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{jogo.img1}}/header.jpg?t={{jogo.img2}}" alt="{{jogo.nome}}" /><br>
                 <div class="">
                   {{jogo.nome}}
                 </div>
