--- a/Gameception/Assinante/Templates/Assinante/CadastroAssinatura.html
+++ b/Gameception/Assinante/Templates/Assinante/CadastroAssinatura.html
@@ -2,6 +2,72 @@
 
 {% block content %}
 
+<h1>Suas informações de endereço</h1>
+
+  {% if registrado %}
+  Obrigado por registrar seu endereço!
+  <a href="{% url 'MinhaConta' %}">voltar para a sua conta</a><br />
+
+  {% else %}
+
+  <strong>Registre seu endereço</strong><br />
+  <form role="form" action="{% url 'CadastroEndereco' %}" method="post">
+      {% csrf_token %}
+      <h2 class="form-signin-heading">Informações de Pagamento</h2>
+      {{ endereco_form.non_field_errors }}
+      <div class="form-group" >
+          <p class="required">
+              <label for="id_quantidade">Quantidade:</label> <input class="form-control"   id="id_quantidade" name="quantidade" type="number" value="0" />
+          </p>
+      </div>
+      <div class="form-group" >
+          {{ endereco_form.complemento.errors }}
+          <p class="required">
+              <label for="id_precoPorJogo">PrecoPorJogo:</label> <input class="form-control"   id="id_precoPorJogo" name="precoPorJogo" type="number" value="0" />
+          </p>
+      </div>
+      <div class="form-group" >
+          {{ endereco_form.CEP.errors }}
+          <p class="required">
+            <label for="id_tipoMidia">TipoMidia:</label> <select class="form-control"  id="id_tipoMidia" name="tipoMidia">
+            <option value="FISICA">Fisica</option>
+            <option value="DIGITAL" selected="selected">Digital</option>
+            </select>
+          </p>
+      </div>
+      <div class="form-group" >
+          {{ endereco_form.CEP.errors }}
+          <p class="required">
+            <label for="id_sistOp">SistOp:</label> <select class="form-control" id="id_sistOp" name="sistOp">
+            <option value="" selected="selected">---------</option>
+            <option value="1">Windows 7</option>
+            <option value="2">Windows 8</option>
+            <option value="3">Windows 10</option>
+            </select>
+          </p>
+      </div>
+      <div class="form-group" >
+          {{ endereco_form.CEP.errors }}
+          <label for="id_memRAM">MemRAM:</label> <input class="form-control" id="id_memRAM" name="memRAM" type="number" value="0" />
+      </div>
+      <div class="form-group" >
+          {{ endereco_form.CEP.errors }}
+          <label for="id_processador">Processador:</label> <select class="form-control" id="id_processador" name="processador">
+          <option value="" selected="selected">---------</option>
+          <option value="1">i7</option>
+          <option value="2">i5</option>
+          <option value="3">i3</option>
+          </select>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+
+  {% endif %}
+
+{% endblock %}
+
+{% block contentz %}
+
       <h1>Suas informações de endereço</h1>
 
         {% if registrado %}
@@ -20,52 +86,4 @@
         </form>
         {% endif %}
 
-{% endblock %}
-
-
-
-
-
-
-
-
-{% block contentz %}
-
-  {% if registrado %}
-
-      Obrigado por registrar-se! <a href="{% url 'Login' %}"> Faça seu login </a> e visite sua conta!
-
-  {% else %}
-
-      <form role="form"  method="post" action="/Assinante/Cadastro/">
-                      {% csrf_token %}
-
-      <h2 class="form-signin-heading">Sign Up Here</h2>
-
-      <div class="form-group" >
-       <p class="required"> <label for="id_username">Username:</label>
-           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-      </div>
-       <div class="form-group">
-          <p class="required"><label for="id_email">E-mail:</label>
-              <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
-       </div>
-      <div class="form-group">
-          <p class="required"><label for="id_password">Password:</label>
-              <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_CPF">CPF:</label>
-       <input class="form-control" id="id_CPF" maxlength="11" name="CPF" type="text" placeholder="CPF" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_nome">Nome:</label>
-       <input class="form-control" id="id_nome" maxlength="200" name="nome" type="text" placeholder="Nome" /></p>
-      </div>
-
-      <button type="submit" class="btn btn-default">Submit</button>
-
-      </form>
-
-    {% endif %}
 {% endblock %}
