--- a/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
+++ b/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
@@ -9,6 +9,83 @@
         <a href="{% url 'MinhaConta' %}">voltar para a sua conta</a><br />
 
         {% else %}
+
+        {% if atual_endereco %}
+        <strong>Registre seu endereço</strong><br />
+        <form role="form" action="{% url 'CadastroEndereco' %}" method="post">
+            {% csrf_token %}
+            <h2 class="form-signin-heading">Informações de Pagamento</h2>
+            {{ endereco_form.non_field_errors }}
+            <div class="form-group" >
+                <p class="required">
+                    <label for="id_rua">rua:</label> <input  class="form-control"  id="id_rua" name="rua" type="text" value={{atual_endereco.rua}} />
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ endereco_form.numeroRua.errors }}
+                <p class="required">
+                    <p><label for="id_numeroRua">numeroRua:</label> <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" value={{atual_endereco.numeroRua}} /></p>
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ endereco_form.complemento.errors }}
+                <p class="required">
+                    <label for="id_complemento">complemento:</label> <input  class="form-control"  id="id_complemento" name="complemento" type="text" value={{atual_endereco.complemento}} />
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ endereco_form.CEP.errors }}
+                <p class="required">
+                    <label for="id_CEP">CEP:</label> <input class="form-control" id="id_CEP" name="CEP" type="text" value={{atual_endereco.CEP}} />
+                </p>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        {% else %}
+        <strong>Registre seu endereço</strong><br />
+        <form role="form" action="{% url 'CadastroEndereco' %}" method="post">
+            {% csrf_token %}
+            <h2 class="form-signin-heading">Informações de Pagamento</h2>
+            {{ endereco_form.non_field_errors }}
+            <div class="form-group" >
+                <p class="required">
+                    <label for="id_rua">rua:</label> <input  class="form-control"  id="id_rua" name="rua" type="text" />
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ endereco_form.numeroRua.errors }}
+                <p class="required">
+                    <p><label for="id_numeroRua">numeroRua:</label> <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" /></p>
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ endereco_form.complemento.errors }}
+                <p class="required">
+                    <label for="id_complemento">complemento:</label> <input  class="form-control"  id="id_complemento" name="complemento" type="text" />
+                </p>
+            </div>
+            <div class="form-group" >
+                {{ endereco_form.CEP.errors }}
+                <p class="required">
+                    <label for="id_CEP">CEP:</label> <input class="form-control"   id="id_CEP" name="CEP" type="text" />
+                </p>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        {% endif %}
+        {% endif %}
+
+{% endblock %}
+
+{% block contentz %}
+
+      <h1>Suas informações de endereço</h1>
+
+        {% if registrado %}
+        Obrigado por registrar seu endereço!
+        <a href="{% url 'MinhaConta' %}">voltar para a sua conta</a><br />
+
+        {% else %}
         <strong>Registre seu endereço</strong><br />
         <form id="user_form" method="post" action="{% url 'CadastroEndereco' %}">
 
@@ -20,52 +97,4 @@
         </form>
         {% endif %}
 
-{% endblock %}
-
-
-
-
-
-
-
-
-{% block contentz %}
-
-  {% if registrado %}
-
-      Obrigado por registrar-se! <a href="{% url 'Login' %}"> Faça seu login </a> e visite sua conta!
-
-  {% else %}
-
-      <form role="form"  method="post" action="/Assinante/Cadastro/">
-                      {% csrf_token %}
-
-      <h2 class="form-signin-heading">Sign Up Here</h2>
-
-      <div class="form-group" >
-       <p class="required"> <label for="id_username">Username:</label>
-           <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-      </div>
-       <div class="form-group">
-          <p class="required"><label for="id_email">E-mail:</label>
-              <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
-       </div>
-      <div class="form-group">
-          <p class="required"><label for="id_password">Password:</label>
-              <input class="form-control" id="id_password" name="password" type="password" placeholder="Enter password" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_CPF">CPF:</label>
-       <input class="form-control" id="id_CPF" maxlength="11" name="CPF" type="text" placeholder="CPF" /></p>
-      </div>
-      <div class="form-group">
-          <p class="required"><label for="id_nome">Nome:</label>
-       <input class="form-control" id="id_nome" maxlength="200" name="nome" type="text" placeholder="Nome" /></p>
-      </div>
-
-      <button type="submit" class="btn btn-default">Submit</button>
-
-      </form>
-
-    {% endif %}
 {% endblock %}
