--- a/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
+++ b/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
@@ -7,39 +7,38 @@
         Os dados bancarios foram armazenados com sucesso. <a href="{% url 'MinhaConta' %}">Voltar à sua página de assinante</a>
 
     {% else %}
-
         <form role="form" action="/Assinante/InfoPagamento/" method="post">
             {% csrf_token %}
             <h2 class="form-signin-heading">Informações de Pagamento</h2>
-
+            <strong>Registre suas informações de pagamento:</strong><br/><br/>
 
             {{ form.non_field_errors }}
             <div class="form-group" >
                 {{ form.numeroCartaoForm.errors }}
                 <p class="required">
                     <label for="{{ form.numeroCartaoForm.id_for_label }}">Numero do cartão:</label>
-                    <input class="form-control"  id="{{ form.numeroCartaoForm.id_for_label }}" name="numeroCartaoForm" type="text"  placeholder="Numero do cartão"/>
+                    <input class="form-control"  id="{{ form.numeroCartaoForm.id_for_label }}" name="numeroCartaoForm" type="text"  placeholder="Numero do cartão" value="{{ form.numeroCartaoForm.value }}"/>
                 </p>
             </div>
             <div class="form-group" >
                 {{ form.codigoSegurancaForm.errors }}
                 <p class="required">
                     <label for="{{ form.codigoSegurancaForm.id_for_label }}">Código de Segurança:</label>
-                    <input class="form-control"  id="{{ form.codigoSegurancaForm.id_for_label }}" name="codigoSegurancaForm" type="text"  placeholder="Código de Segurança"/>
+                    <input class="form-control"  id="{{ form.codigoSegurancaForm.id_for_label }}" name="codigoSegurancaForm" type="text"  placeholder="Código de Segurança" value="{{ form.codigoSegurancaForm.value }}"/>
                 </p>
             </div>
             <div class="form-group" >
                 {{ form.nomeTitularForm.errors }}
                 <p class="required">
                     <label for="{{ form.nomeTitularForm.id_for_label }}">Nome do Titular:</label>
-                    <input class="form-control"  id="{{ form.nomeTitularForm.id_for_label }}" name="nomeTitularForm" type="text"  placeholder="Nome do Titular"/>
+                    <input class="form-control"  id="{{ form.nomeTitularForm.id_for_label }}" name="nomeTitularForm" type="text"  placeholder="Nome do Titular" value="{{ form.nomeTitularForm.value }}"/>
                 </p>
             </div>
             <div class="form-group" >
                 {{ form.vencimentoForm.errors }}
                 <p class="required">
                     <label for="{{ form.vencimentoForm.id_for_label }}">Data de Vencimento:</label>
-                    <input class="form-control"  id="{{ form.vencimentoForm.id_for_label }}" name="vencimentoForm" type="text"  placeholder="Data de Vencimento"/>
+                    <input class="form-control"  id="{{ form.vencimentoForm.id_for_label }}" name="vencimentoForm" type="text"  placeholder="Data de Vencimento" value="{{ form.vencimentoForm.value }}"/>
                 </p>
             </div>
 
