--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -113,7 +113,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Outras opções</h3>
           </div>
-          <a href="#">Editar senha e nome de usuário</a> <br>
+          <a href="{% url 'EditarCAdastro' %}">Editar informações de cadastro</a> <br>
           <a href="{% url 'ContatoAdmin' %}">Contatar um administrador</a> <br>
         </div>
       </div>
