--- a/Gameception/Assinante/Templates/Assinante/EditarCadastro.html
+++ b/Gameception/Assinante/Templates/Assinante/EditarCadastro.html
@@ -12,7 +12,7 @@
       <form role="form"  method="post" action="/Assinante/Cadastro/">
                       {% csrf_token %}
 
-      <h2 class="form-signin-heading">Sign Up Here</h2>
+      <h2 class="form-signin-heading">Edite Seu Cadastro</h2>
 
       <div class="form-group" >
        <p class="required"> <label for="id_username">Username:</label>
