--- a/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
+++ b/Gameception/Assinante/Templates/Assinante/InfoPagamento.html
@@ -17,28 +17,28 @@
                 {{ form.numeroCartaoForm.errors }}
                 <p class="required">
                     <label for="{{ form.numeroCartaoForm.id_for_label }}">Numero do cartão:</label>
-                    <input class="form-control"  id="{{ form.numeroCartaoForm.id_for_label }}" name="numeroCartaoForm" type="text"  placeholder="Numero do cartão" value="{{ form.numeroCartaoForm.value }}"/>
+                    <input class="form-control"  id="{{ form.numeroCartaoForm.id_for_label }}" name="numeroCartaoForm" type="text"  placeholder="Numero do cartão" {% if form.numeroCartaoForm.value != None %}value="{{ form.numeroCartaoForm.value }}" {% endif %}/>
                 </p>
             </div>
             <div class="form-group" >
                 {{ form.codigoSegurancaForm.errors }}
                 <p class="required">
                     <label for="{{ form.codigoSegurancaForm.id_for_label }}">Código de Segurança:</label>
-                    <input class="form-control"  id="{{ form.codigoSegurancaForm.id_for_label }}" name="codigoSegurancaForm" type="text"  placeholder="Código de Segurança" value="{{ form.codigoSegurancaForm.value }}"/>
+                    <input class="form-control"  id="{{ form.codigoSegurancaForm.id_for_label }}" name="codigoSegurancaForm" type="text"  placeholder="Código de Segurança" {% if form.codigoSegurancaForm.value != None %}value="{{ form.codigoSegurancaForm.value }}" {% endif %}/>
                 </p>
             </div>
             <div class="form-group" >
                 {{ form.nomeTitularForm.errors }}
                 <p class="required">
                     <label for="{{ form.nomeTitularForm.id_for_label }}">Nome do Titular:</label>
-                    <input class="form-control"  id="{{ form.nomeTitularForm.id_for_label }}" name="nomeTitularForm" type="text"  placeholder="Nome do Titular" value="{{ form.nomeTitularForm.value }}"/>
+                    <input class="form-control"  id="{{ form.nomeTitularForm.id_for_label }}" name="nomeTitularForm" type="text"  placeholder="Nome do Titular" {% if form.nomeTitularForm.value != None %}value="{{ form.nomeTitularForm.value }}" {% endif %}/>
                 </p>
             </div>
             <div class="form-group" >
                 {{ form.vencimentoForm.errors }}
                 <p class="required">
                     <label for="{{ form.vencimentoForm.id_for_label }}">Data de Vencimento:</label>
-                    <input class="form-control"  id="{{ form.vencimentoForm.id_for_label }}" name="vencimentoForm" type="text"  placeholder="Data de Vencimento" value="{{ form.vencimentoForm.value }}"/>
+                    <input class="form-control"  id="{{ form.vencimentoForm.id_for_label }}" name="vencimentoForm" type="text"  placeholder="Data de Vencimento" {% if form.vencimentoForm.value != None %}value="{{ form.vencimentoForm.value }}" {% endif %}/>
                 </p>
             </div>
 
