--- a/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
+++ b/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
@@ -17,30 +17,25 @@
             {{ endereco_form.non_field_errors }}
             <div class="form-group" >
                 <p class="required">
-                    <label for="id_rua">Rua:</label>
-                    {{ endereco_form.rua.errors }}
-                    <input  class="form-control"  id="id_rua" name="rua" type="text" value={{atual_endereco.rua}} />
+                    <label for="id_rua">Rua:</label> <input  class="form-control"  id="id_rua" name="rua" type="text" value={{atual_endereco.rua}} />
                 </p>
             </div>
             <div class="form-group" >
+                {{ endereco_form.numeroRua.errors }}
                 <p class="required">
-                    <label for="id_numeroRua">Numero:</label>
-                    {{ endereco_form.numeroRua.errors }}
-                    <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" value={{atual_endereco.numeroRua}} />
+                    <p><label for="id_numeroRua">Numero:</label> <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" value={{atual_endereco.numeroRua}} /></p>
                 </p>
             </div>
             <div class="form-group" >
+                {{ endereco_form.complemento.errors }}
                 <p class="required">
-                    <label for="id_complemento">Complemento:</label>
-                    {{ endereco_form.complemento.errors }}
-                    <input  class="form-control"  id="id_complemento" name="complemento" type="text" value={{atual_endereco.complemento}} />
+                    <label for="id_complemento">Complemento:</label> <input  class="form-control"  id="id_complemento" name="complemento" type="text" value={{atual_endereco.complemento}} />
                 </p>
             </div>
             <div class="form-group" >
+                {{ endereco_form.CEP.errors }}
                 <p class="required">
-                    <label for="id_CEP">CEP:</label>
-                    {{ endereco_form.CEP.errors }}
-                    <input class="form-control" id="id_CEP" name="CEP" type="text" value={{atual_endereco.CEP}} />
+                    <label for="id_CEP">CEP:</label> <input class="form-control" id="id_CEP" name="CEP" type="text" value={{atual_endereco.CEP}} />
                 </p>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
@@ -52,35 +47,52 @@
             {{ endereco_form.non_field_errors }}
             <div class="form-group" >
                 <p class="required">
-                    <label for="id_rua">Rua:</label>
-                    {{ endereco_form.rua.errors }}
-                    <input  class="form-control"  id="id_rua" name="rua" type="text" />
+                    <label for="id_rua">Rua:</label> <input  class="form-control"  id="id_rua" name="rua" type="text" />
                 </p>
             </div>
             <div class="form-group" >
+                {{ endereco_form.numeroRua.errors }}
                 <p class="required">
-                    <label for="id_numeroRua">Numero:</label>
-                    {{ endereco_form.numeroRua.errors }}
-                    <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" />
+                    <p><label for="id_numeroRua">Numero:</label> <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" /></p>
                 </p>
             </div>
             <div class="form-group" >
+                {{ endereco_form.complemento.errors }}
                 <p class="required">
-                    <label for="id_complemento">Complemento:</label>
-                    {{ endereco_form.complemento.errors }}
-                    <input  class="form-control"  id="id_complemento" name="complemento" type="text" />
+                    <label for="id_complemento">Complemento:</label> <input  class="form-control"  id="id_complemento" name="complemento" type="text" />
                 </p>
             </div>
             <div class="form-group" >
+                {{ endereco_form.CEP.errors }}
                 <p class="required">
-                    <label for="id_CEP">CEP:</label>
-                    {{ endereco_form.CEP.errors }}
-                    <input class="form-control"   id="id_CEP" name="CEP" type="text" />
+                    <label for="id_CEP">CEP:</label> <input class="form-control"   id="id_CEP" name="CEP" type="text" />
                 </p>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
         {% endif %}
+        {% endif %}
+
+{% endblock %}
+
+{% block contentz %}
+
+      <h1>Suas informações de endereço</h1>
+
+        {% if registrado %}
+        Obrigado por registrar seu endereço!
+        <a href="{% url 'MinhaConta' %}">voltar para a sua conta</a><br />
+
+        {% else %}
+        <strong>Registre seu endereço</strong><br />
+        <form id="user_form" method="post" action="{% url 'CadastroEndereco' %}">
+
+            {% csrf_token %}
+
+            {{ endereco_form.as_p }}
+
+            <input type="submit" name="submit" value="Register" />
+        </form>
         {% endif %}
 
 {% endblock %}
